# mcpi_shared_lib

./: .readme.txt  CMakeLists.txt  readme.txt
glider/: CMakeLists.txt
glider/src/: glider.cpp
goldenshovel/: CMakeLists.txt  readme.txt
goldenshovel/lang/: en_US.lang
goldenshovel/src/: goldenshovel.cpp
goldenshovel_with_recipe/: CMakeLists.txt
goldenshovel_with_recipe/src/: goldenshovel_with_recipe.cpp
kuroobi/: CMakeLists.txt  readme.txt
kuroobi/lang/: en_US.lang
kuroobi/src/: kuroobi.cpp
redarmor/: CMakeLists.txt
redarmor/src/: redarmor.cpp
src/: b.cpp
